<resources>
    <string name="app_name">Task Management</string>
    <string name="home">Home</string>
    <string name="deliverer_tasks">Deliverer Tasks</string>
    <string name="recipient_tasks">Recipient</string>
    <string name="task_title">Task Title</string>
    <string name="hint_title">Title</string>
    <string name="received_date">Received date</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="specialist">Specialist</string>
    <string name="distributor">Distributor</string>
    <string name="hint_specialist">Specialist name</string>
    <string name="hint_receiver">Receiver</string>
    <string name="price_deliverer">Outcome</string>
    <string name="price_distributor">Income</string>
    <string name="hint_price">Price</string>
    <string name="task_state">Task State</string>
    <string name="save_task">Save task</string>
    <string name="hint_task_state">State</string>
    <string name="err_enter_title_task">Please Enter Title Task</string>
    <string name="err_enter_date_task">Please Enter Date of Received</string>
    <string name="distributors_empty">There are no Distributors added in Database</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_msg">Do you want to delete?</string>
    <string name="distributor_name">Distibtor name</string>
    <string name="name">Name</string>
    <string name="distributor_phone">Distributor phone</string>
    <string name="phone">Phone</string>
    <string name="save_distributor">Save distributor</string>
    <string name="add_distributor">Add Distributor</string>
    <string name="code">Code</string>
    <string-array name="taskState">
        <item>In do</item>
        <item>Done</item>
    </string-array>
    <!--Start Country-->
    <string name="egypt">Egypt</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="qatar">Qatar</string>
    <string name="libya">Libya</string>
    <string name="oman">Oman</string>
    <string name="kuwit">Kuwit</string>
    <string name="emirates">Emirates</string>
    <string name="distributors">Distributors</string>
    <string name="add">Add</string>
    <string name="hint_name_of_specialization">Enter name of specialization</string>
    <string name="specializations">Specializations</string>
    <string name="specializations_empty">There are no Specializations added in database</string>
    <string name="add_specialist">Add new Specialist</string>
    <string name="specialist_name">Specialist name</string>
    <string name="specialist_phone">Specialist phone</string>
    <string name="save_specialist">Save specialist</string>
    <string name="specialist_notes">Specialist note</string>
    <string name="notes">الملاحظات</string>
    <string name="specialist_evaluation">Specialist evaluation</string>
    <string name="select_specializations">Select Specializations</string>
    <string name="err_no_specialization_to_select">There are no Specilization to choose Click here to add new Specilization</string>
    <string name="apply_change">Apply Change</string>
    <string name="percent">Percent</string>
    <string name="type_employment_distributor">Income Employment</string>
    <string name="type_employment_specialist">Outcome Employment</string>
    <string name="Employment">Employment</string>
    <string name="details_price">Price Details</string>
    <string name="date">Date</string>
    <string name="choose_currency">Choose Currency</string>
    <!--Employment-->
    <string name="egypt_currency">EGP</string>
    <string name="iraq_currency">IQD</string>
    <string name="syria_currency">SYP</string>
    <string name="saudi_currency">SAR</string>
    <string name="kawat_currency">KWD</string>
    <string name="bahrain_currency">BHD</string>
    <string name="qater_currency">QAR</string>
    <string name="emirates_currency">AED</string>
    <string name="oman_currency">OMR</string>
    <string name="palestine_currency">PP</string>
    <string name="ok">OK</string>
    <string name="err_no_tasks">There are no tasks store in database</string>
    <string name="noSpecialist">No Specialist</string>
    <string name="task_state_dialog_msg">Is task complete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="old_income_price">Old income</string>
    <string name="old_outcome_price">Old outcome</string>
    <string name="new_income_price">New income</string>
    <string name="new_outcome_price">New outcome</string>
    <string name="edit_price_dialog_title">Edit Price</string>
    <string name="cancel">Cancel</string>
    <string name="not_defined">Not defined</string>
    <string name="search_task_by_date">Date</string>
    <string name="search_task_by_distributor">Distributors</string>
    <string name="search_task_by_specialist">Specialists</string>
    <string name="search_task_by_state">Complete</string>
    <string name="search_task_by_currency">Currency</string>
    <string name="choose_filter_method">Choose Filter Method</string>
    <string name="complete_state">Complete State</string>
    <string name="in_do_state">In do State</string>
    <string name="currency">Currency</string>
    <string name="recent_tasks">Recent Tasks</string>
    <string name="complete_tasks">Complete tasks</string>
    <string name="in_do_tasks">In do tasks</string>
    <string name="paid_distributor_tasks">Paid distributors tasks</string>
    <string name="un_paid_distributor_tasks">Unpaid distributors tasks</string>
    <string name="paid_specialist_tasks">Paid specialists tasks</string>
    <string name="un_paid_specialist_tasks">Unpaid specialists tasks</string>
    <string name="is_distributor_accounted">Is distributor accounted?</string>
    <string name="is_specialist_accounted">Is specialist accounted?</string>
    <string name="info">Information Distributor</string>
    <string name="show_income_today">Display total income today</string>
    <string name="show_outcome_today">Display outcome today</string>
    <string name="no_income_summary_today">Opps! there is no income today</string>
    <string name="no_outcome_summary_today">Opps! there is no outcome today</string>
    <string name="there_are">There are</string>
    <string name="today">Today</string>
    <string name="tasks"> Tasks</string>
    <string name="specialists">Specialists</string>
    <string name="welcome">Welcome</string>
    <string name="tasks_not_paid_by_distributor">Tasks not paid by distributors</string>
    <string name="un_paid_tasks_to_specialists">Unpaid tasks to specialists</string>
    <string name="add_new_distributor">Add new distributor</string>
    <string name="add_new_task">Add new task</string>
    <string name="add_new_specialist">Add new specialist</string>

</resources>