<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tvTitleDialog"
        style="@style/TitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="287dp"
        android:padding="@dimen/_5sdp"
        android:text="@string/edit_price_dialog_title"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_currency"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitleDialog"
        android:layout_marginStart="@dimen/_5sdp"

        />

    <TextView
        android:id="@+id/tvOldPriceTitle"
        style="@style/TitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/old_income_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDialog" />

    <TextView
        android:id="@+id/tvOldPrice"
        style="@style/ContentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="1000.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOldPriceTitle" />

    <TextView
        android:id="@+id/tvNewPriceTitle"
        style="@style/TitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/new_income_price"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOldPrice" />

    <EditText
        android:id="@+id/edNewPrice"
        style="@style/ContentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal"
        android:padding="@dimen/_5sdp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewPriceTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        style="@style/AppCompatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edNewPrice"
        android:background="@android:color/transparent"
        android:textColor="@color/green"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/AppCompatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/cancel"
        android:background="@android:color/transparent"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edNewPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>

